# cbor_enhanced

./: Cargo.toml  LICENSE-MIT  LICENSE.txt  readme.md
.github/workflows/: rust.yml
core/: Cargo.toml  readme.md
core/examples/: arrays.rs  protocol_derive.rs  simple.rs  zerocopy.rs
core/src/: context.rs  convert_slice.rs  error.rs  lib.rs
core/src/de/: iana_bigint.rs  iana_chrono.rs  iana_geo.rs  iana_mime.rs  iana_numbers.rs  iana_regex.rs  iana_uuid.rs  mod.rs
core/src/de/iana_std/: address.rs  arrays.rs  mod.rs
core/src/protocol_derive/: mod.rs  o.rs
core/src/ser/: iana_bigint.rs  iana_chrono.rs  iana_geo.rs  iana_mime.rs  iana_numbers.rs  iana_regex.rs  iana_uuid.rs  mod.rs  serialize_primitive_seq.rs
core/src/ser/iana_std/: address.rs  arrays.rs  mod.rs
core/src/types/: iana_tag.rs  mod.rs
core/src/value/: mod.rs
core/tests/: test_vectors.rs  transmute.rs
derive_protocol/: Cargo.toml
derive_protocol/src/: de.rs  lib.rs  ser.rs
serde_support/: Cargo.toml
serde_support/src/de/: mod.rs
serde_support/src/ser/: mod.rs
serde_support/tests/: serialization.rs  teststructs.rs
src/: error.rs  lib.rs
src/de/: iana_bigint.rs  iana_chrono.rs  iana_geo.rs  iana_mime.rs  iana_numbers.rs  iana_regex.rs  iana_uuid.rs  mod.rs
src/de/iana_std/: address.rs  arrays.rs
src/ser/: iana_bigint.rs  iana_chrono.rs  iana_geo.rs  iana_mime.rs  iana_numbers.rs  iana_regex.rs  iana_uuid.rs  mod.rs
src/ser/iana_std/: address.rs  arrays.rs
src/types/: iana_tag.rs  mod.rs
src/value/: mod.rs
tests/: test_vectors.rs
