[package]
name = "cbor_enhanced_derive_protocol"
version = "0.1.0"
authors = ["Christian Loehnert"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Derive macro implementation for cbor_enhanced"
[lib]
proc-macro = true

[dependencies]
syn = "1.0.33"
quote = "1.0.7"
proc-macro2 = "1.0.18"