[package]
name = "cbor_enhanced_derive_protocol"
version = "0.1.1"
authors = ["Christian Loehnert"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Derive macro implementation for cbor_enhanced"
homepage = "https://github.com/krampenschiesser/cbor_enhanced"
repository = "https://github.com/krampenschiesser/cbor_enhanced"
documentation = "https://docs.rs/cbor_enhanced"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.74"
quote = "1.0.9"
proc-macro2 = "1.0.28"