[package]
name = "cbor_enhanced_serde"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cbor_enhanced = { path = "../core", optional= true, version = "*", features=["iana_std","use_serde"] }
anyhow = "1.0.42"
num = "0.4.0"